updated ports lookup

--- a/dashboards/corelight.conf
+++ b/dashboards/corelight.conf
@@ -12,7 +12,7 @@
 }
     },
 {
-  query: "(logfile contains 'conn'  service= *)\n\n| group count() by id.resp_p = id.resp_p + \"\", service\n| lookup \"Description\" from \"ports.csv\" by Port=id.resp_p\n| filter Description = null",
+  query: "(logfile contains 'conn'  service= *)\n\n| group count() by id.resp_p = id.resp_p + \"\", service\n| lookup \"description\" from \"ports.csv\" by port_number=id.resp_p\n| filter Description = null",
   title: "Odd Ports",
   layout: {
   h: 12,
